[package]
name = "cell_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = {version = "0.13.*", features = ["rayon"]}
array-init = "2.1.*"
lerp = "0.4.*"
num-traits = "0.2.*"
ab_glyph = "0.2.*"
rayon = "1.6.*"
parking_lot = "0.12.*"
#serde-hjson = "0.9.*"
#regex = "1.7.*"
#derive_is_enum_variant = "0.1.*"
#fmt-derive = "0.0.*"

[dependencies.sdl2]
version = "0.35.*"
default-features = false
features = ["image"]
